--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     <label for="categoria">Tags</label>
                     <input type="text" name="categoria" id="categoria">
                 </div>
-                <ul class="lista-tags">
+                <ul class="lista-tags" id="lista-tags">
                     <li>
                         <p>Front-end</p>
                         <img src="img/close-black.svg">
