--- a/index.html
+++ b/index.html
@@ -76,12 +76,7 @@
                     <label for="categoria">Tags</label>
                     <input type="text" name="categoria" id="categoria">
                 </div>
-                <ul class="lista-tags" id="lista-tags">
-                    <li>
-                        <p>Front-end</p>
-                        <img src="img/close-black.svg">
-                    </li>
-                </ul>
+                <ul class="lista-tags" id="lista-tags"></ul>
                 <div class="container-botoes">
                     <button class="botao-descartar">Descartar</button>
                     <button class="botao-publicar">Publicar</button>
